--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "eddeserus"
 version = "0.1.0"
-authors = ["bsaul <bradleysaul@gmail.com>"]
+authors = ["Bradley Saul <bsaul@novisci.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.11", features = ["derive"] }
+serde_json = "1.0.11"
