--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.11", features = ["derive"] }
 serde_json = "1.0.11"
+serde_tuple = "0.5.0"
