--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,4 +16,5 @@ site:
   stage: site
   script:
     - cargo rustdoc
+    - sleep 5
     - aws s3 sync $CI_PROJECT_DIR/target/doc/ s3://docs.novisci.com/$CRATE_NAME/ --delete --acl public-read
