--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,22 @@
 [package]
 name = "eddeserus"
-version = "0.1.9"
+version = "0.2.0"
 authors = ["Bradley Saul <bsaul@novisci.com>"]
 edition = "2018"
 
 [dependencies]
-serde = { version = "1.0.11", features = ["derive"] }
-serde_json = "1.0.11"
+serde = { version = "1.0.79", features = ["derive"] }
+serde_json = { version = "1.0.30", features = ["raw_value"] }
 serde_tuple = "0.5.0"
+
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "experiment"
+harness = false
+
+[[bench]]
+name = "sede"
+harness = false
