--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,12 @@ serde = { version = "1.0.79", features = ["derive"] }
 serde_json = { version = "1.0.30", features = ["raw_value"] }
 serde_tuple = "0.5.0"
 
-
 [dev-dependencies]
 criterion = "0.3"
 
-[[bench]]
-name = "experiment"
-harness = false
+#[[bench]]
+#name = "experiment"
+#harness = false
 
 [[bench]]
 name = "sede"
